<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mobileassignment2.MainActivity">
    <item
        android:id="@+id/action_upload"
        android:icon="@drawable/baseline_cloud_upload_24"
        android:orderInCategory="100"
        android:title="@string/action_upload"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_download"
        android:icon="@drawable/baseline_cloud_download_24"
        android:orderInCategory="101"
        android:title="@string/action_download"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>